# ditto

./: .pylintrc  .style.yapf  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.githooks/: pre-commit
.github/workflows/: python-package.yml
ditto/: __init__.py  core.py
scripts/: code.sh  format.sh  lint.sh  test.sh  type-check.sh
tests/: test_core.py  test_ditto.py  test_ok.py
