[tool.poetry]
name = "ditto"
version = "0.1.0"
description = ""
authors = ["Alexis Manuel <alexis.manuelpro@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
pytest = "^7.3.1"
freezegun = "^1.2.2"
