[tool.poetry]
name = "pyditto"
version = "0.1.0"
description = ""
authors = ["Alexis Manuel <alexis.manuelpro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ditto"}]


[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
pytest = "^7.3.1"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
