[tool.poetry]
name = "pyditto"
version = "0.1.3"
description = ""
authors = ["Alexis Manuel <alexis.manuelpro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ditto"}]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
pytest = "^7.3.1"
freezegun = "^1.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.5.1"

[tool.poe.tasks]
test = "pytest --cov=ditto --cov-report term-missing tests"
lint = "ruff check ditto"
format-check = "ruff format --check ditto"
format = "ruff format ditto"
sort = "isort ditto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
